--- a/qdrant-landing/themes/qdrant/layouts/case-studies/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/case-studies/single.html
@@ -4,8 +4,7 @@
         <!-- Content Side -->
         <section class="col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
-            <article class="article article_narrow article_bb mb-4">
-                <div class="article__cover mt-lg-5 mb-4"></div>
+            <article class="article article_narrow article_bb mt-lg-5 mb-4">
                 <h1>{{ .Title }}</h1>
                 {{ .Content }}
             </article>
