--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -91,6 +91,20 @@
         }]
     }
 </script>
+{{ else if and (eq .Section "case-studies") .IsPage }}
+<script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "{{ .Params.title }}",
+        "image": [
+            {{ .Params.social_preview_image  | absURL }},
+        ],
+        "abstract": {{ .Params.description }},
+        "datePublished": {{ .Params.date }},
+        "dateModified": {{ .Params.date }}
+    }
+</script>
 {{ end }}
 
 {{ $url := urls.Parse .Site.BaseURL }}
