fix docs sidebad css

--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -84,6 +84,11 @@ code {
   padding-left: 0.5rem;
 }
 
+.link-group li {
+  margin-top: 10px;
+  line-height: 1.3;
+}
+
 .link-group-heading span {
   font-family: "Roboto Condensed";
 }
