--- a/qdrant-landing/themes/qdrant/layouts/documentation.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation.html
@@ -346,8 +346,8 @@
 </div>
 <!--End pagewrapper-->
 
-<!--Scroll to top-->
-<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-circle-up"></span></div>
+<!--Scroll to top
+<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-circle-up"></span></div>-->
 
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
