seed article & db adjustments

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -9,8 +9,9 @@
           <!-- Content Column -->
           <div class="content-column col-lg-6 col-md-7 col-sm-12">
             <div class="inner-column">
-              <h1>Vector Search Engine</h1>
-              <h4 class="d-inline-block">Build your own exclusive AI products.</h4><br>
+              <h1>Vector Database</h1>
+              <h4 class="d-inline-block">Powering the next generation of AI applications
+                with advanced and high-performant vector similarity search technology.</h4><br>
 
                 <div class="hero-code mb-4">
                   <!-- Don't change an alignment inside this code tag-->
