added a table of content

--- a/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
@@ -4,10 +4,11 @@
 
 
 <section>
-    <div class="auto-container pt-4 pt-md-5">
+    <div class="container-fluid px-5 pt-4 pt-md-5">
         <div class="row clearfix">
             {{- partial "docs_sidebar.html" . -}}
             {{ block "main" . }}{{ end }}
+            {{- partial "table_of_content.html" . -}}
         </div>
     </div>
 </section>
