--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -147,6 +147,7 @@ blockquote {
 @import "blocks/article-card";
 @import "blocks/breadcrumbs";
 @import "blocks/share-post";
+@import "blocks/table_of_content";
 @import "blocks/footer";
 @import "responsive";
 
