--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,9 +1,9 @@
 {{$currentNode := .}}
-<nav class="col-lg-3 col-md-3 col-12 mt-0 mt-md-3 pr-4 mr-3 mb-4 position-relative">
+<nav class="documentation__sidebar-inner col-lg-2 col-md-2 col-12 pr-4 mb-4 position-relative">
 
     {{ $sectionLink := cond .IsSection .RelPermalink .Parent.RelPermalink }}
     {{ $subject := site.GetPage $sectionLink }}
-    <div id="accordion" class="sticky-top documentation__sidebar">
+    <div id="accordion" class="sticky-top documentation__sidebar-inner">
 
         <!-- buttons for Qdrant/Cloud doc switching-->
         {{ $isCloud := cond (in $sectionLink "cloud") true false }}
@@ -20,17 +20,12 @@
             {{ range $subject.RegularPages }}
             <div class="link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}">
                 <div class="link-group-heading" id="headingOne">
-                <span class="mb-0">
-                    <a class="btn btn-link collapsed pl-0" href="{{ .Permalink }}">
-                        {{ .Title }}
-                    </a>
-                </span>
+                    <span class="mb-0">
+                        <a class="btn btn-link collapsed pl-0" href="{{ .Permalink }}">
+                            {{ .Title }}
+                        </a>
+                    </span>
                 </div>
-                {{ if eq .File.UniqueID $currentNode.File.UniqueID }}
-                <div class="pl-4">
-                    {{ .TableOfContents }}
-                </div>
-                {{ end }}
             </div>
             {{ end }}
 
