--- a/qdrant-landing/themes/qdrant/layouts/documentation/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="documentation col-12 col-md-7 col-11 pb-5">
+<article class="col-12 col-md-7 pb-5">
 
     {{ .Content }}
 
