--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -1,4 +1,5 @@
 @use "helpers/functions";
+@use "helpers/utils";
 
 @import "colors";
 @import "../../../../node_modules/bootstrap/scss/bootstrap.scss";
