--- a/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
@@ -3,6 +3,9 @@
 
 .documentation {
   @include mixins.content-reset;
+  padding-top: 2rem;
+  margin-top: 0.5rem;
+  border-top: 1px solid var(--brand-light-grey);
 
   h1 {
     font-size: 2.25rem;
@@ -32,11 +35,8 @@
     margin-bottom: 0.7rem;
   }
 
-  &__sidebar {
-    margin-top: 2.24rem;
-  }
   &__sidebar-inner {
-    top: lib.rem(30);
+    top: lib.rem(8);
   }
   &__sidebar-list {
     max-height: calc(100vh - 90px);
