--- a/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
@@ -4,8 +4,21 @@
 
   &__header {
     margin-bottom: 0.8rem;
-    line-height: 1;
     margin-left: -5px;
+  }
+
+  & ul {
+    margin: 0;
+  }
+
+  & ul li {
+    padding-left: 0;
+    list-style: none;
+    margin: 0;
+    &:not(nav > ul  > li) {
+      list-style: '· ';
+      margin-left: 0.5rem;
+    }
   }
 
   & a {
