--- a/qdrant-landing/themes/qdrant/layouts/documentation/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 {{ $isCloud := cond (in .Parent.RelPermalink "cloud") true false }}
 
-<div class="col-12 col-md-7 pb-5">
+<div class="col-12 col-md-9 col-lg-8 pb-5">
 
     <article>
         {{ .Content }}
