added support for nested docs, added toggling groups of links, delimiters, external links

--- a/qdrant-landing/themes/qdrant/layouts/documentation/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="col-12 col-md-9 col-lg-8 pb-5">
+<article class="documentation__article col-12 col-md-9 col-lg-8 pb-5">
 
     {{ .Content }}
 
