--- a/qdrant-landing/themes/qdrant/layouts/documentation/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/single.html
@@ -3,7 +3,7 @@
 
 <div class="col-12 col-md-9 col-lg-8 pb-5">
 
-    <article>
+    <article class="documentation__article">
         {{ .Content }}
     </article>
 
