--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,32 +1,66 @@
 {{$currentNode := .}}
 <nav class="documentation__sidebar-inner col-lg-2 col-md-3 col-12 pr-4 mb-4 position-relative">
 
-    {{ $sectionLink := cond .IsSection .RelPermalink .Parent.RelPermalink }}
-    {{ $subject := site.GetPage $sectionLink }}
+    {{ $subject := site.GetPage "documentation" }}
+
     <div id="accordion" class="sticky-top documentation__sidebar-inner">
 
-        <!-- buttons for Qdrant/Cloud doc switching-->
-        {{ $isCloud := cond (in $sectionLink "cloud") true false }}
-        <div class="btn-group btn-group-sm w-100 mb-3" role="group" aria-label="...">
-            <a class="btn {{if $isCloud}}btn--light{{else}}btn--mid-grey font-weight-bold{{end}}" href="/documentation/">Qdrant</a>
-            <a class="btn {{if $isCloud}}btn--mid-grey font-weight-bold{{else}}btn--light{{end}}" href="/documentation/cloud/">Cloud</a>
-        </div>
         <!-- Button triggers search modal -->
         <button type="button" class="qdr-search-input-btn w-100 mb-2 w-100" data-target="#searchModal">
             <i class="fa fa-search mr-2"></i>Search...
         </button>
 
-<div class="documentation__sidebar-list">
-            {{ range $subject.RegularPages }}
-            <div class="link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}">
-                <div class="link-group-heading" id="headingOne">
-                    <span class="mb-0">
-                        <a class="btn btn-link text-left collapsed pl-0" href="{{ .Permalink }}">
-                            {{ .Title }}
-                        </a>
-                    </span>
-                </div>
-            </div>
+        <div class="documentation__sidebar-list">
+            {{ range $subject.Pages }}
+
+                {{ if (eq .Params.type "delimiter") }}
+                    <h5 class="documentation__sidebar-delimiter">{{ .Title }}</h5>
+                {{ else }}
+
+                {{ if .IsPage }}
+
+                    <div class="link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}">
+                        <div class="link-group-heading">
+                            <span class="mb-0">
+                                <a class="btn btn-link text-left collapsed pl-0"
+                                   href="{{ if (eq .Params.type "external-link") }}{{ .Params.external_url }}{{ else }}{{ .Permalink }}{{ end }}"
+                                   {{ if (eq .Params.type "external-link") }}target="_blank"{{ end }}
+                                >
+                                    {{ .Title }}
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+
+                {{ end }}
+
+                {{ if .IsSection }}
+
+                    <details class="documentation__sidebar-link-group link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}"
+                        {{ if eq .File.UniqueID $currentNode.File.UniqueID }}open{{ end }}>
+                        <summary class="link-group-heading">
+                            <span class="mb-0">
+                                <a class="btn btn-link text-left collapsed pl-0" href="{{ .Permalink }}">
+                                    {{ .Title }}
+                                </a>
+                            </span>
+                        </summary>
+
+                        <div class="pl-4">
+                            <nav id="TableOfContents">
+                                <ul>
+                                    {{ range .RegularPages }}
+                                        <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+                                    {{ end }}
+                                </ul>
+                            </nav>
+                        </div>
+                    </details>
+
+                {{ end }}
+
+                {{ end }}
+
             {{ end }}
 
             <br/>
