--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -99,11 +99,21 @@ code {
   display: flex;
   align-items: center;
   font-family: $font-family-non-content;
+  text-decoration: none;
   color: var(--brand-secondary);
+  .link-group__icon {
+    color: var(--brand-dark-gray);
+    font-size: 10px;
+    margin-left: 6px;
+    margin-bottom: 1px;
+  }
 }
 
 .link-group a:hover {
   color: var(--brand-primary);
+  .link-group__icon {
+    color: var(--brand-primary);
+  }
 }
 
 .link-group.active nav li.active > a {
@@ -111,13 +121,6 @@ code {
   &:hover {
     color: var(--brand-secondary);
   }
-}
-
-.link-group__icon {
-  font-size: 10px;
-  color: var(--brand-dark-gray);
-  margin-left: 6px;
-  margin-bottom: 2px;
 }
 
 .installation-section p {
