--- a/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
@@ -1,13 +1,11 @@
 {{- partial "header.html" . -}}
 
-{{- partial "second_header.html" . -}}
-
-
-<section>
-    <div class="auto-container pt-4 pt-md-5">
+<section class="documentation">
+    <div class="container-xxl pt-4 pt-md-5">
         <div class="row clearfix">
             {{- partial "docs_sidebar.html" . -}}
             {{ block "main" . }}{{ end }}
+            {{- partial "table_of_content.html" . -}}
         </div>
     </div>
 </section>
