--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,37 +1,96 @@
 {{$currentNode := .}}
-<nav class="col-lg-3 col-md-3 col-12 mt-0 mt-md-3 pr-4 mr-3 mb-4 position-relative">
+<nav class="documentation__sidebar-inner col-lg-2 col-md-3 col-12 pr-4 mb-4 position-relative">
 
-    {{ $sectionLink := cond .IsSection .RelPermalink .Parent.RelPermalink }}
-    {{ $subject := site.GetPage $sectionLink }}
-    <div id="accordion" class="sticky-top documentation__sidebar">
+    {{ $subject := site.GetPage "documentation" }}
 
-        <!-- buttons for Qdrant/Cloud doc switching-->
-        {{ $isCloud := cond (in $sectionLink "cloud") true false }}
-        <div class="btn-group btn-group-sm w-100 mb-3" role="group" aria-label="...">
-            <a class="btn {{if $isCloud}}btn--light{{else}}btn--mid-grey font-weight-bold{{end}}" href="/documentation/">Qdrant</a>
-            <a class="btn {{if $isCloud}}btn--mid-grey font-weight-bold{{else}}btn--light{{end}}" href="/documentation/cloud/">Cloud</a>
-        </div>
+    <div id="accordion" class="sticky-top documentation__sidebar-inner">
+
         <!-- Button triggers search modal -->
         <button type="button" class="qdr-search-input-btn w-100 mb-2 w-100" data-target="#searchModal">
             <i class="fa fa-search mr-2"></i>Search...
         </button>
 
-<div class="documentation__sidebar-list">
-            {{ range $subject.RegularPages }}
-            <div class="link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}">
-                <div class="link-group-heading" id="headingOne">
-                <span class="mb-0">
-                    <a class="btn btn-link collapsed pl-0" href="{{ .Permalink }}">
-                        {{ .Title }}
-                    </a>
-                </span>
-                </div>
-                {{ if eq .File.UniqueID $currentNode.File.UniqueID }}
-                <div class="pl-4">
-                    {{ .TableOfContents }}
-                </div>
+        <div class="documentation__sidebar-list">
+            {{ range $subject.Pages }}
+
+                {{ if (eq .Params.type "delimiter") }}
+                    <h5 class="documentation__sidebar-delimiter">{{ .Title }}</h5>
+                {{ else }}
+
+                {{ if .IsPage }}
+
+                    <div class="link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}">
+                        <div class="link-group-heading">
+                            <span class="mb-0">
+                                <a class="btn btn-link text-left collapsed pl-0"
+                                   href="{{ if (eq .Params.type "external-link") }}{{ .Params.external_url }}{{ else }}{{ .Permalink }}{{ end }}"
+                                   {{ if (eq .Params.type "external-link") }}target="_blank"{{ end }}
+                                >
+                                    {{ .Title }}
+                                    {{ if (eq .Params.type "external-link") }}
+                                        <i class="link-group__icon fas fa-external-link-alt"></i>
+                                    {{ end }}
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+
                 {{ end }}
-            </div>
+
+                {{ if .IsSection }}
+
+                    <!-- current page is active or any sub-page is active -->
+                    {{ $isActive := false }}
+                    {{ range .RegularPages }}
+                        {{ if eq .File.UniqueID $currentNode.File.UniqueID }}
+                            {{ $isActive = true }}
+                        {{ end }}
+                    {{ end }}
+
+                    {{ if eq .File.UniqueID $currentNode.File.UniqueID }}
+                        {{ $isActive = true }}
+                    {{ end }}
+
+                    {{ $sectionLink := .Permalink }}
+
+                    {{ if .Params.is_empty }}
+                        {{ $sectionLink = (index (.RegularPages) 0).Permalink }}
+                    {{ end }}
+
+                    <details class="documentation__sidebar-link-group link-group {{ if $isActive }}active {{ end }}"
+                        {{ if $isActive }}open{{ end }}>
+                        <summary class="link-group-heading">
+                            <span class="mb-0">
+                                <a class="btn btn-link text-left collapsed pl-0" href="{{ $sectionLink }}">
+                                    {{ .Title }}
+                                </a>
+                            </span>
+                        </summary>
+
+                        <div class="pl-4">
+                            <nav id="TableOfContents">
+                                <ul>
+                                    {{ range .RegularPages }}
+                                        {{ if (eq .Params.type "external-link") }}
+                                            <li>
+                                                <a href="{{ .Params.external_url }}" target="_blank">
+                                                    {{ .Title }}
+                                                    <i class="link-group__icon fas fa-external-link-alt"></i>
+                                                </a>
+                                            </li>
+                                        {{ else }}
+                                            <li class="{{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}"><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+                                        {{ end }}
+                                    {{ end }}
+                                </ul>
+                            </nav>
+                        </div>
+                    </details>
+
+                {{ end }}
+
+                {{ end }}
+
             {{ end }}
 
             <br/>
