fix for safari: one arrow on details summary

--- a/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
@@ -86,6 +86,10 @@
       margin-right: 10px;
       position: relative;
 
+      &::-webkit-details-marker {
+        display: none;
+      }
+
       &:after {
         display: block;
         width: lib.rem(10);
