fix index page link

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -22,7 +22,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
                   </a>
                 </div> <br>
 
-              <div class="sec-title text">Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
+              <div class="sec-title text">Take a look at our <a target="_blank" href="{{ .Site.Params.quick-start }}">Quick Start Guide</a>
                 or build your own neural search <br> with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a></div>
 
                 <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive mr-sm-3 mb-2 mb-lg-0" href="{{ .Site.Params.benchmarks }}">
