--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -48,7 +48,7 @@
             <!-- Price Block -->
             <div class="price-block col-lg-4 col-md-6 col-sm-12 mb-5 pb-5">
                 <div class="inner-box">
-                    <div class="title">Open Source</div>
+                    <div class="title">Community</div>
                     <div class="content-box">
                         <div class="price-box">
                             <span class="icon flaticon-skyline"></span> Free
@@ -56,14 +56,15 @@
                         </div>
                         <div class="text">Build your AI-based applications using our leading open-source vector search technology.
                         </div>
-                        <a href="/documentation/quick_start/" class="theme-btn btn-style-five btn-small w-100">
+                        <a href="/documentation/quick-start/" class="theme-btn btn-style-five btn-small w-100">
                             <span class="txt">Quick Start</span>
                         </a>
                         <ul class="price-list">
-                            <li>Free & Open Forever</li>
-                            <li>Self-hosted</li>
+                            <li>Free Forever</li>
+                            <li>Open Source</li>
+                            <li>Self-Hosted</li>
                             <li>Full-Featured</li>
-                            <li>Community support</li>
+                            <li>Community Support</li>
                         </ul>
                     </div>
                 </div>
@@ -76,19 +77,51 @@
                     <div class="content-box">
                         <div class="price-box">
                             <span class="icon flaticon-skyline"></span> Starting from $25
-                            <span class="price-title">Per pod/month billed hourly</span>
+                            <span class="price-title">Per node/month billed hourly</span>
                         </div>
                         <div class="text">Scale your production solutions in the managed cloud without deployment and maintenance overhead.
                         </div>
                         <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100">
-                            <span class="txt">Join Cloud Beta</span>
+                            <span class="txt">Try for Free</span>
                         </a>
                         <ul class="price-list">
-                            <li>Managed & Monitored by Us</li>
-                            <li>High Availability & Performance</li>
-                            <!-- <li>Turnkey Data Migration</li> -->
-                            <li>Expert Support</li>
-                            <li>Free Tier available</li>
+                            <li>
+                                Fully Managed & Monitored
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Managed & Monitored by Us"
+                                data-content="Use our admin & billing interface as well as complete monitoring, logging & metrics support.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                High Availability & Performance
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Vertical Scaling"
+                                data-content="Resizing options starting at 2GB RAM, all the way to 64 (or more) GB.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                Expert Technical Support
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Expert Support"
+                                data-content="Direct communication via Discord or Slack channels.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                Free Tier Available
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Free Trial Cluster"
+                                data-content="We will include a free 1GB cluster for you to try out.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li><a href="https://cloud.qdrant.io/calculator">Use our Capacity & Pricing Calculator</a></li>
                         </ul>
                     </div>
                 </div>
@@ -101,7 +134,7 @@
                     <div class="content-box">
                         <div class="price-box">
                             <span class="icon flaticon-skyline"></span> Price on Request
-                            <span class="price-title">/ per managed cluster</span>
+                            <span class="price-title"> Priced per managed cluster</span>
                         </div>
                         <div class="text">Let us take care of your on-premise deployments to achieve the best possible performance and accuracy.
                         </div>
@@ -114,6 +147,14 @@
                                 data-container="body" data-toggle="popover" data-placement="right"
                                 data-trigger="focus" title="Performance & Deployment"
                                 data-content="We'll design a fault tolerant architecture that provides maximum performance for search and online updates.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>On-Demand Horizontal Scaling 
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Horizontal Scaling Support"
+                                data-content="We offer extensive optimization strategies and scaling support.">
                                     <i class="fas fa-info-circle"></i>
                                 </a>
                             </li>
@@ -135,7 +176,15 @@
                                     <i class="fas fa-info-circle"></i>
                                 </a>
                             </li>
-                            <li>Dedicated Support</li>
+                            <li>
+                                Dedicated Technical Support
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Dedicated Support"
+                                data-content="Dedicated Discord or Slack channel with an assigned Support Specialist.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
