--- a/qdrant-landing/themes/qdrant/layouts/datasets/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/datasets/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-{{ range $i,$p := where .Data.Pages "Section" "benchmarks" }}
+{{ range $i,$p := where .Data.Pages "Section" "datasets" }}
 
 
 <div class="auto-container pt-3 pt-md-5 single-page">
