update calculator link plus more txt

--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -60,11 +60,11 @@
                             <span class="txt">Quick Start</span>
                         </a>
                         <ul class="price-list">
-                            <li>Free Forever</li>
-                            <li>Open Source</li>
+                            <li>Open Source & Free Forever</li>
                             <li>Self-Hosted</li>
                             <li>Full-Featured</li>
-                            <li>Community Support</li>
+                            <li>Organized Community Support</li>
+                            <li>Learning Resources & Docs</li>
                         </ul>
                     </div>
                 </div>
@@ -79,12 +79,30 @@
                             <span class="icon flaticon-skyline"></span> Starting from $25
                             <span class="price-title">Per node/month billed hourly</span>
                         </div>
-                        <div class="text">Scale your production solutions in the managed cloud without deployment and maintenance overhead.
+                        <div class="text">Scale your production solutions without deployment and upkeep. <a href="https://cloud.qdrant.io/calculator">Calculate your usage here.</a>
                         </div>
                         <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100">
                             <span class="txt">Try for Free</span>
                         </a>
                         <ul class="price-list">
+                            <li>
+                                Free Tier Available
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Free Trial Cluster"
+                                data-content="We will include a free 1GB cluster for you to try out.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                Convenient User Interface
+                                <a class="a" role="note" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="User Interface"
+                                data-content="Setup your cluster and deploy to the cloud in a few clicks.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
                             <li>
                                 Fully Managed & Monitored
                                 <a class="a" role="note" tabindex="0"
@@ -112,16 +130,8 @@
                                     <i class="fas fa-info-circle"></i>
                                 </a>
                             </li>
-                            <li>
-                                Free Tier Available
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Free Trial Cluster"
-                                data-content="We will include a free 1GB cluster for you to try out.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li><a href="https://cloud.qdrant.io/calculator">Use our Capacity & Pricing Calculator</a></li>
+
+                            
                         </ul>
                     </div>
                 </div>
@@ -136,10 +146,10 @@
                             <span class="icon flaticon-skyline"></span> Price on Request
                             <span class="price-title"> Priced per managed cluster</span>
                         </div>
-                        <div class="text">Let us take care of your on-premise deployments to achieve the best possible performance and accuracy.
+                        <div class="text">We take care of your on-premise deployments to achieve the best possible performance and accuracy.
                         </div>
                         <a href="{{ .Site.Params.mailchimp_contact_form }}" class="theme-btn btn-style-five btn-small w-100">
-                            <span class="txt">Contact sales</span>
+                            <span class="txt">Contact Us</span>
                         </a>
                         <ul class="price-list">
                             <li>Performance & Deployment
