add bold to link

--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -79,7 +79,7 @@
                             <span class="icon flaticon-skyline"></span> Starting from $25
                             <span class="price-title">Per node/month billed hourly</span>
                         </div>
-                        <div class="text">Scale your production solutions without deployment and upkeep. <a href="https://cloud.qdrant.io/calculator">Calculate your usage here.</a>
+                        <div class="text">Scale your production solutions without deployment and upkeep. <a style="font-weight:bold" href="https://cloud.qdrant.io/calculator">Calculate your usage here.</a>
                         </div>
                         <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100">
                             <span class="txt">Try for Free</span>
